fixes cross-browser select display cropping (closes #761)

--- a/app/App.css
+++ b/app/App.css
@@ -157,7 +157,7 @@ input[type="text"] {
     font-size: 13px;
     height: 35px;
     line-height: 13px;
-    padding: 9px 23px 9px 9px;
+    padding: 0 23px 0 9px;
     transition: background 0.2s;
     &:hover {
       background: rgb(241, 241, 241);
